Contributors meta fixes
Changes functions for contributors meta data. Separates each field into
separate calls Name, Twitter, Image. Adds new styling to meta data, and
adds a truncated title function for use in the meta bar.

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 }
 
 a{
-  font-weight: 600;
+
   color: #303030;
 }
 a:hover{
@@ -303,6 +303,9 @@ Post Meta
   font-size: 18px;
   color: #303030;
 }
+.contributors-meta a {
+  font-weight: 600;
+}
 
 .post-meta .subtitle {
   padding-top: 4px;
@@ -313,9 +316,10 @@ Post Meta
   padding-right: 0;
 }
 
-.twitter-handle {
-  font-size: 14px;
+.twitter-name {
+  font-size: 12px;
   color: #303030;
+  font-weight: 400;
   padding-top: 16px;
   margin-bottom: 0px;
 }
@@ -515,7 +519,6 @@ Mobile
   border: 1;
 }
 
-
 .mobile-cover img {
   border-radius: 50%;
   z-index: 10;
@@ -558,6 +561,10 @@ Navigation
 
 #footer li {
   line-height: 1.8em;
+}
+
+#footer a {
+  font-weight: 600;
 }
 
 .footer-title b {
@@ -777,6 +784,7 @@ Buttons & Fields
 .btn {
   padding: 6px 16px 6px 6px;
   font-size: 18px;
+  font-weight: 400;
   border: 2px solid transparent;
   border-color: #303030;
   border-radius: 2px;
@@ -804,9 +812,9 @@ Buttons & Fields
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary{
   color: #fff;
-  background-color: #255715;
+  background-color: #006E3B;
   text-decoration: none;
-  border-color: #255715;
+  border-color: #006E3B;
 }
 
 .btn-fb {
